[project]
name = "gitig"
version = "23.4.0"
description = "Generate .gitignore files from the command-line"
authors = [{name = "Andrew Ross", email = "andrew.ross.mail@gmail.com"}]
license = "MIT"
requires-python = ">= 3.8.1"

readme = "README.md"

keywords = ["cli", "git", "gitignore", "config"]

classifiers = [
  "Programming Language :: Python :: 3.0",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[dependency-groups]
dev = [
  "black >=23.3.0,<24",
  "flake8 >=6.0.0,<7",
  "pylint >=2.17.2,<3",
  "reorder-python-imports >=3.9.0,<4",
  "bump2version >=1.0.1,<2",
  "pre-commit >=3.2.2,<4",
]

[project.scripts]
gi = 'gitig:cli'

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/andrewrosss/gitig"
Repository = "https://github.com/andrewrosss/gitig"
Documentation = "https://github.com/andrewrosss/gitig"
